objects/vloc_cmt_track__WaveDataSet__c.object
<CustomObject>
    <description>To hold the data of WaveDemoData CSV file. Custom Fields will represent the header column of CSV</description>
    <fields>
        <fullName>vloc_cmt_track__AgentManager__c</fullName>
        <label>Agent Manager</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__CallHandlingTime2__c</fullName>
        <label>Call Handling Time -2</label>
        <precision>18</precision>
        <scale>13</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__CallHandlingTime__c</fullName>
        <label>Call Handling Time</label>
        <precision>18</precision>
        <scale>13</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__CareAgentExpTrans__c</fullName>
        <label>Care Agent Experience with this type of</label>
        <precision>18</precision>
        <scale>13</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__CareAgentExperience__c</fullName>
        <label>Care Agent Expereince</label>
        <precision>18</precision>
        <scale>13</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__CareAgent__c</fullName>
        <label>Care Agent</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__ChurnInteraction__c</fullName>
        <label>Churn interaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__ChurnReason__c</fullName>
        <label>Churn Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor Offer</fullName>
                </value>
                <value>
                    <fullName>Move</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__ChurnSaveRate__c</fullName>
        <label>Churn Save Rate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__ChurnSave__c</fullName>
        <label>Churn Save</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__ChurnScore__c</fullName>
        <label>Churn Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__ConsoleActionLogName__c</fullName>
        <label>Console Action Log Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__ContactCenter__c</fullName>
        <label>Contact Center</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__CustomerNPS__c</fullName>
        <label>Customer NPS</label>
        <precision>18</precision>
        <scale>13</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__CustomerRegion__c</fullName>
        <label>Customer Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__CustomerSubRegion__c</fullName>
        <label>Customer Sub-Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__DayofWeek__c</fullName>
        <label>Day of Week</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__FirstCallResolutionRate__c</fullName>
        <label>First Call Resolution Rate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__FirstCallResolution__c</fullName>
        <label>First Call Resolution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__InteractionEndTime__c</fullName>
        <label>Interaction end Time</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__InteractionEnd__c</fullName>
        <label>Interaction End</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__InteractionStartTime__c</fullName>
        <label>Interaction start time</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__InteractionStart__c</fullName>
        <label>Interaction Start</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__InteractionTime__c</fullName>
        <label>Interaction Time to Step</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__InteractionType__c</fullName>
        <label>Interaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Churn</fullName>
                </value>
                <value>
                    <fullName>Trouble</fullName>
                </value>
                <value>
                    <fullName>Upsell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__ObjectId__c</fullName>
        <label>ObjID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__ObjectType__c</fullName>
        <label>Object Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__OmniScriptRecord__c</fullName>
        <externalId>true</externalId>
        <label>OmniScriptRecord</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__OmniScript__c</fullName>
        <label>OmniScript</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Broadband Upsell</fullName>
                </value>
                <value>
                    <fullName>Change Payment Method</fullName>
                </value>
                <value>
                    <fullName>Churn Prevention</fullName>
                </value>
                <value>
                    <fullName>Convert Abandoned Cart</fullName>
                </value>
                <value>
                    <fullName>Customer Cancel</fullName>
                </value>
                <value>
                    <fullName>Past Due Bill</fullName>
                </value>
                <value>
                    <fullName>Promotion Upsell</fullName>
                </value>
                <value>
                    <fullName>Re Activate Service</fullName>
                </value>
                <value>
                    <fullName>Trouble - Reception</fullName>
                </value>
                <value>
                    <fullName>Trouble - Remote</fullName>
                </value>
                <value>
                    <fullName>Trouble - STB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__Product__c</fullName>
        <label>Product</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__Promotion__c</fullName>
        <label>Promotion</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__RecordLink__c</fullName>
        <label>Record Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__Record__c</fullName>
        <externalId>true</externalId>
        <label>Record</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__ScriptMode__c</fullName>
        <label>Script Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__StepEvent__c</fullName>
        <label>Step Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__StepTime__c</fullName>
        <label>Step Time</label>
        <precision>18</precision>
        <scale>13</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__StepType__c</fullName>
        <label>Step Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Capture Payment</fullName>
                </value>
                <value>
                    <fullName>Close Activity</fullName>
                </value>
                <value>
                    <fullName>Close SR</fullName>
                </value>
                <value>
                    <fullName>Customer Assessment</fullName>
                </value>
                <value>
                    <fullName>New Activity</fullName>
                </value>
                <value>
                    <fullName>New Order</fullName>
                </value>
                <value>
                    <fullName>New SR</fullName>
                </value>
                <value>
                    <fullName>Review Offer</fullName>
                </value>
                <value>
                    <fullName>Review Order</fullName>
                </value>
                <value>
                    <fullName>Review SR</fullName>
                </value>
                <value>
                    <fullName>Review T&amp;C</fullName>
                </value>
                <value>
                    <fullName>Start Call</fullName>
                </value>
                <value>
                    <fullName>Switch Tab</fullName>
                </value>
                <value>
                    <fullName>Update Activity</fullName>
                </value>
                <value>
                    <fullName>Update Profile</fullName>
                </value>
                <value>
                    <fullName>Update SR</fullName>
                </value>
                <value>
                    <fullName>Validate Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__Step__c</fullName>
        <label>Step</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__TabId__c</fullName>
        <label>TabID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__TabName__c</fullName>
        <label>Tab Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__TimeOnHold__c</fullName>
        <label>Time on Hold</label>
        <precision>18</precision>
        <scale>13</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__Time__c</fullName>
        <label>Time</label>
        <precision>18</precision>
        <scale>13</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__TroubleInteraction__c</fullName>
        <label>Trouble Interaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__UpsellDollar__c</fullName>
        <label>Upsell $</label>
        <precision>18</precision>
        <scale>13</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__UpsellInteraction__c</fullName>
        <label>Upsell Interaction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__UpsellSuccessRate__c</fullName>
        <label>Upsell Success Rate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__UpsellSuccess__c</fullName>
        <label>Upsell Success</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__UserId__c</fullName>
        <label>UserID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__UserName__c</fullName>
        <label>UserName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vloc_cmt_track__UserYrsExp__c</fullName>
        <label>User Yrs Exp</label>
        <precision>18</precision>
        <scale>13</scale>
        <type>Number</type>
    </fields>
    <label>Wave Data Set</label>
    <nameField>
        <label>WaveDataSet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wave Data Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>